welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:9: error: Boolean does not take parameters
			{if (monte())
                                  ^ZigZag:18: error: value ==- is not a member of Int
		else {if (x==-1)
                           ^